Some minor cleanup

--- a/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
+++ b/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
@@ -190,6 +190,10 @@
     "rescaledu0 = 1/(alpha*sp.sqrt(1-Rmax))\n",
     "regularu0 =  1/(alpha*sp.sqrt(1-R))\n",
     "\n",
+    "default_outputC_includebraces = par.parval_from_str(\"outputC::includebraces\")\n",
+    "default_outputC_outCverbose   = par.parval_from_str(\"outputC::outCverbose\")\n",
+    "default_outputC_CSE_varprefix = par.parval_from_str(\"outputC::CSE_varprefix\")\n",
+    "\n",
     "computeu0_Cfunction  = \"/* Function for computing u^0 from Valencia 3-velocity. */\\n\"\n",
     "computeu0_Cfunction += \"/* Inputs: ValenciavU[], alpha, gammaDD[][], GAMMA_SPEED_LIMIT (C parameter) */\\n\"\n",
     "computeu0_Cfunction += \"/* Output: u0=u^0 and velocity-limited ValenciavU[] */\\n\\n\"\n",
@@ -209,6 +213,11 @@
     "par.set_parval_from_str(\"outputC::CSE_varprefix\",\"tmprescale\")\n",
     "computeu0_Cfunction += outputC([rescaledValenciavU[0],rescaledValenciavU[1],rescaledValenciavU[2],rescaledu0],\n",
     "                               [\"ValenciavU[0]\",\"ValenciavU[1]\",\"ValenciavU[2]\",\"u0\"],\"returnstring\")\n",
+    "\n",
+    "# Reset outputC parameters to the same values they were set to coming in to this function.\n",
+    "par.set_parval_from_str(\"outputC::includebraces\",default_outputC_includebraces)\n",
+    "par.set_parval_from_str(\"outputC::outCverbose\",default_outputC_outCverbose)\n",
+    "par.set_parval_from_str(\"outputC::CSE_varprefix\",default_outputC_CSE_varprefix)\n",
     "\n",
     "print(computeu0_Cfunction)"
    ]
