--- a/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
+++ b/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
@@ -80,71 +80,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "   const double tmp0 = ValenciavU0*alpha;\n",
-      "   const double tmp1 = tmp0*u0;\n",
-      "   const double tmp2 = gammaDD11*gammaDD22;\n",
-      "   const double tmp3 = gammaDD01*gammaDD12;\n",
-      "   const double tmp4 = pow(gammaDD12, 2);\n",
-      "   const double tmp5 = pow(gammaDD01, 2);\n",
-      "   const double tmp6 = pow(gammaDD02, 2);\n",
-      "   const double tmp7 = 1.0/(gammaDD00*tmp2 - gammaDD00*tmp4 + 2*gammaDD02*tmp3 - gammaDD11*tmp6 - gammaDD22*tmp5);\n",
-      "   const double tmp8 = BtildeU0*tmp7;\n",
-      "   const double tmp9 = ValenciavU1*alpha;\n",
-      "   const double tmp10 = tmp9*u0;\n",
-      "   const double tmp11 = BtildeU1*tmp7;\n",
-      "   const double tmp12 = ValenciavU2*alpha;\n",
-      "   const double tmp13 = tmp12*u0;\n",
-      "   const double tmp14 = BtildeU2*tmp7;\n",
-      "   const double tmp15 = tmp11*(gammaDD01*tmp10 + gammaDD11*tmp10 + gammaDD12*tmp10) + tmp14*(gammaDD02*tmp13 + gammaDD12*tmp13 + gammaDD22*tmp13) + tmp8*(gammaDD00*tmp1 + gammaDD01*tmp1 + gammaDD02*tmp1);\n",
-      "   const double tmp16 = 1/(sqrt(M_PI)*alpha);\n",
-      "   const double tmp17 = (1.0/2.0)*tmp16;\n",
-      "   const double tmp18 = tmp15*tmp17;\n",
-      "   const double tmp19 = -betaU0 + tmp0;\n",
-      "   const double tmp20 = tmp15*u0;\n",
-      "   const double tmp21 = tmp19*tmp20 + tmp8;\n",
-      "   const double tmp22 = 1.0/u0;\n",
-      "   const double tmp23 = tmp17*tmp22;\n",
-      "   const double tmp24 = tmp21*tmp23;\n",
-      "   const double tmp25 = -betaU1 + tmp9;\n",
-      "   const double tmp26 = tmp11 + tmp20*tmp25;\n",
-      "   const double tmp27 = tmp23*tmp26;\n",
-      "   const double tmp28 = -betaU2 + tmp12;\n",
-      "   const double tmp29 = tmp14 + tmp20*tmp28;\n",
-      "   const double tmp30 = tmp23*tmp29;\n",
-      "   const double tmp31 = betaU0*gammaDD00 + betaU1*gammaDD01 + betaU2*gammaDD02;\n",
-      "   const double tmp32 = gammaDD00*tmp24 + gammaDD01*tmp27 + gammaDD02*tmp30 + tmp18*tmp31;\n",
-      "   const double tmp33 = betaU0*gammaDD01 + betaU1*gammaDD11 + betaU2*gammaDD12;\n",
-      "   const double tmp34 = gammaDD01*tmp24 + gammaDD11*tmp27 + gammaDD12*tmp30 + tmp18*tmp33;\n",
-      "   const double tmp35 = betaU0*gammaDD02 + betaU1*gammaDD12 + betaU2*gammaDD22;\n",
-      "   const double tmp36 = gammaDD02*tmp24 + gammaDD12*tmp27 + gammaDD22*tmp30 + tmp18*tmp35;\n",
-      "   const double tmp37 = pow(alpha, 2);\n",
-      "   const double tmp38 = betaU0*tmp31 + betaU1*tmp33 + betaU2*tmp35 - tmp37;\n",
-      "   const double tmp39 = tmp18*tmp38 + tmp24*tmp31 + tmp27*tmp33 + tmp30*tmp35;\n",
-      "   const double tmp40 = tmp18*tmp39 + tmp24*tmp32 + tmp27*tmp34 + tmp30*tmp36;\n",
-      "   const double tmp41 = tmp25*u0;\n",
-      "   const double tmp42 = tmp28*u0;\n",
-      "   const double tmp43 = tmp38*u0;\n",
-      "   const double tmp44 = tmp40*(tmp19*tmp43 + tmp31*tmp41 + tmp33*tmp42 + tmp43);\n",
-      "   const double tmp45 = tmp38/tmp37;\n",
-      "   const double tmp46 = -gammaDD02*gammaDD11 + tmp3;\n",
-      "   const double tmp47 = tmp35*tmp7;\n",
-      "   const double tmp48 = -gammaDD01*gammaDD22 + gammaDD02*gammaDD12;\n",
-      "   const double tmp49 = tmp33*tmp7;\n",
-      "   const double tmp50 = tmp31*tmp7;\n",
-      "   const double tmp51 = (1.0/4.0)*tmp16;\n",
-      "   const double tmp52 = tmp22*tmp51;\n",
-      "   const double tmp53 = tmp15*tmp39*tmp51 + tmp21*tmp32*tmp52 + tmp26*tmp34*tmp52 + tmp29*tmp36*tmp52;\n",
-      "   const double tmp54 = -gammaDD00*gammaDD12 + gammaDD01*gammaDD02;\n",
-      "   smallb4U0GF[CCTK_GFINDEX3D(cctkGH, i0, i1, i2)] = tmp18;\n",
-      "   smallb4U1GF[CCTK_GFINDEX3D(cctkGH, i0, i1, i2)] = tmp24;\n",
-      "   smallb4U2GF[CCTK_GFINDEX3D(cctkGH, i0, i1, i2)] = tmp27;\n",
-      "   smallb4U3GF[CCTK_GFINDEX3D(cctkGH, i0, i1, i2)] = tmp30;\n",
-      "   smallb2GF[CCTK_GFINDEX3D(cctkGH, i0, i1, i2)] = tmp40;\n",
-      "   PoynSU0GF[CCTK_GFINDEX3D(cctkGH, i0, i1, i2)] = alpha*(tmp19*tmp44*u0 - tmp24*tmp39 + tmp53*(betaU0*tmp45 + tmp46*tmp47 + tmp48*tmp49 + tmp50*(tmp2 - tmp4)));\n",
-      "   PoynSU1GF[CCTK_GFINDEX3D(cctkGH, i0, i1, i2)] = alpha*(-tmp27*tmp39 + tmp41*tmp44 + tmp53*(betaU1*tmp45 + tmp47*tmp54 + tmp48*tmp50 + tmp49*(gammaDD00*gammaDD22 - tmp6)));\n",
-      "   PoynSU2GF[CCTK_GFINDEX3D(cctkGH, i0, i1, i2)] = alpha*(-tmp30*tmp39 + tmp42*tmp44 + tmp53*(betaU2*tmp45 + tmp46*tmp50 + tmp47*(gammaDD00*gammaDD11 - tmp5) + tmp49*tmp54));\n",
-      "}\n"
+      "Wrote to file \"sbPoynETNRPy/src/u0.h\"\n",
+      "Wrote to file \"sbPoynETNRPy/src/smallb4U_smallb2_PoynSU.h\"\n"
      ]
     }
    ],
@@ -187,12 +124,22 @@
     "# Step 1g: Set the gridfunction memory access type to \"ETK\":\n",
     "par.set_parval_from_str(\"GridFuncMemAccess\",\"ETK\")\n",
     "\n",
-    "# Step 1h: Use NRPy+'s outputC to convert the SymPy expressions for smallb4U, smallb2, and PoynSU to C code:\n",
+    "# Step 1h: Make output directories:\n",
+    "!mkdir sbPoynETNRPy     2>/dev/null # 2>/dev/null: Don't throw an error or warning if the directory already exists.\n",
+    "!mkdir sbPoynETNRPy/src 2>/dev/null # 2>/dev/null: Don't throw an error or warning if the directory already exists.\n",
+    "\n",
+    "# Step 1i: Output routine for computing u0:\n",
+    "with open(\"sbPoynETNRPy/src/u0.h\", \"w\") as file:\n",
+    "    file.write(str(u0etc.computeu0_Cfunction))\n",
+    "    print(\"Wrote to file \\\"\"+file.name+\"\\\"\")\n",
+    "\n",
+    "# Step 1j: Use NRPy+'s outputC to convert the SymPy expressions for smallb4U, smallb2, and PoynSU to C code:\n",
     "outputC([u0etc.smallb4U[0],u0etc.smallb4U[1],u0etc.smallb4U[2],u0etc.smallb4U[3],u0etc.smallb2, \n",
     "         u0etc.PoynSU[0],u0etc.PoynSU[1],u0etc.PoynSU[2]],\n",
     "         [gri.gfaccess(\"\",\"smallb4U0\"),gri.gfaccess(\"\",\"smallb4U1\"),gri.gfaccess(\"\",\"smallb4U2\"),gri.gfaccess(\"\",\"smallb4U3\"),\n",
     "          gri.gfaccess(\"\",\"smallb2\"),\n",
-    "          gri.gfaccess(\"\",\"PoynSU0\"),gri.gfaccess(\"\",\"PoynSU1\"),gri.gfaccess(\"\",\"PoynSU2\")])"
+    "          gri.gfaccess(\"\",\"PoynSU0\"),gri.gfaccess(\"\",\"PoynSU1\"),gri.gfaccess(\"\",\"PoynSU2\")],\n",
+    "       filename=\"sbPoynETNRPy/src/smallb4U_smallb2_PoynSU.h\")"
    ]
   },
   {
