Start work on output C code

--- a/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
+++ b/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
@@ -143,11 +143,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 2: Build up the needed Einstein Toolkit infrastructure to implement the NRPy+-generated C code kernels\n",
+    "\n",
+    "### Step 2a: We next need to write the C code functions called by the Einstein Toolkit scheduler that incorporate the above \".h\" files:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%writefile sbPoynETNRPy/src/sbPoynETNRPy.c\n",
+    "\n",
+    "#include <math.h>\n",
+    "#include <stdio.h>\n",
+    "#include <stdlib.h>\n",
+    "#include <string.h>\n",
+    "#include \"cctk.h\"\n",
+    "#include \"cctk_Arguments.h\"\n",
+    "#include \"cctk_Parameters.h\"\n",
+    "\n",
+    "void sbPoynETNRPy_lowlevel(const cGH* restrict const cctkGH,const int *cctk_lsh,\n",
+    "                           const CCTK_REAL *gammaDD00GF,const CCTK_REAL *gammaDD01GF,const CCTK_REAL *gammaDD02GF,\n",
+    "                           const CCTK_REAL *gammaDD11GF,const CCTK_REAL *gammaDD12GF,const CCTK_REAL *gammaDD22GF,\n",
+    "                           const CCTK_REAL *alphaGF,\n",
+    "                           const CCTK_REAL *betaU0GF,const CCTK_REAL *betaU1GF,const CCTK_REAL *betaU2GF,\n",
+    "                           const CCTK_REAL *ValenciavU0GF,const CCTK_REAL *ValenciavU1GF,const CCTK_REAL *ValenciavU2GF,\n",
+    "                           const CCTK_REAL *BtildeU0GF,const CCTK_REAL *BtildeU1GF,const CCTK_REAL *BtildeU2GF,\n",
+    "\n",
+    "                           CCTK_REAL *smallb4U0GF,CCTK_REAL *smallb4U1GF,CCTK_REAL *smallb4U2GF,CCTK_REAL *smallb4U3GF,\n",
+    "                           CCTK_REAL *smallb2GF,\n",
+    "                           CCTK_REAL *PoynSU0GF,CCTK_REAL *PoynSU1GF,CCTK_REAL *PoynSU2GF) {\n",
+    "\n",
+    "#pragma omp parallel for\n",
+    "    for(int i2=0;i2<cctk_lsh[2];i2++) for(int i1=0;i1<cctk_lsh[1];i1++) for(int i0=0;i0<cctk_lsh[0];i0++) {\n",
+    "        const CCTK_REAL gammaDD00 = gammaDD00GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "        const CCTK_REAL gammaDD01 = gammaDD01GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "        const CCTK_REAL gammaDD02 = gammaDD02GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "        const CCTK_REAL gammaDD11 = gammaDD11GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "        const CCTK_REAL gammaDD12 = gammaDD12GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "        const CCTK_REAL gammaDD22 = gammaDD22GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "\n",
+    "        const CCTK_REAL alpha = al[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "\n",
+    "        const CCTK_REAL betaU0 = betaU0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "        const CCTK_REAL betaU1 = betaU1GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "        const CCTK_REAL betaU2 = betaU2GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "        \n",
+    "        \n",
+    "        CCTK_REAL u0;\n",
+    "#include \"u0.h\"\n",
+    "#include \"smallb4U_smallb2_PoynSU.h\"\"\n",
+    "    }\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
