Start work on output C code

--- a/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
+++ b/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
@@ -153,9 +153,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting sbPoynETNRPy/src/sbPoynETNRPy.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile sbPoynETNRPy/src/sbPoynETNRPy.c\n",
     "\n",
@@ -188,13 +196,21 @@
     "        const CCTK_REAL gammaDD12 = gammaDD12GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
     "        const CCTK_REAL gammaDD22 = gammaDD22GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
     "\n",
-    "        const CCTK_REAL alpha = al[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "        const CCTK_REAL alpha = alphaGF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
     "\n",
     "        const CCTK_REAL betaU0 = betaU0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
     "        const CCTK_REAL betaU1 = betaU1GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
     "        const CCTK_REAL betaU2 = betaU2GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
     "        \n",
-    "        \n",
+    "        // Valencia 3-velocity may be ceiling\n",
+    "        CCTK_REAL ValenciavU0 = ValenciavU0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "        CCTK_REAL ValenciavU1 = ValenciavU1GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "        CCTK_REAL ValenciavU2 = ValenciavU2GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "\n",
+    "        const CCTK_REAL BtildeU0 = BtildeU0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "        const CCTK_REAL BtildeU1 = BtildeU1GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "        const CCTK_REAL BtildeU2 = BtildeU2GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "\n",
     "        CCTK_REAL u0;\n",
     "#include \"u0.h\"\n",
     "#include \"smallb4U_smallb2_PoynSU.h\"\"\n",
