Tutorial-ETK_thorn-u0_smallb_Poynting now outputs a full ETK thorn!

--- a/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
+++ b/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
@@ -148,7 +148,7 @@
    "source": [
     "## Step 2: Build up the needed Einstein Toolkit infrastructure to implement the NRPy+-generated C code kernels\n",
     "\n",
-    "### Step 2a: We next need to write the C code functions called by the Einstein Toolkit scheduler that incorporate the above \".h\" files:"
+    "### Step 2a: Write the C code functions called by the Einstein Toolkit scheduler that incorporate the above \".h\" files:"
    ]
   },
   {
@@ -202,7 +202,7 @@
     "        const CCTK_REAL betaU1 = betaU1GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
     "        const CCTK_REAL betaU2 = betaU2GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
     "        \n",
-    "        // Valencia 3-velocity may be ceiling\n",
+    "        // Valencia 3-velocity may be adjusted due to the velocity ceiling.\n",
     "        CCTK_REAL ValenciavU0 = ValenciavU0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
     "        CCTK_REAL ValenciavU1 = ValenciavU1GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
     "        CCTK_REAL ValenciavU2 = ValenciavU2GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
@@ -215,7 +215,199 @@
     "#include \"u0.h\"\n",
     "#include \"smallb4U_smallb2_PoynSU.h\"\"\n",
     "    }\n",
+    "}\n",
+    "\n",
+    "extern void sbPoynETNRPy(CCTK_ARGUMENTS) {\n",
+    "    \n",
+    "    DECLARE_CCTK_PARAMETERS;\n",
+    "    DECLARE_CCTK_ARGUMENTS;\n",
+    "\n",
+    "    if(cctk_iteration % sbPoynETNRPy_calc_every != 0) { return; }\n",
+    "    \n",
+    "    /* Calculate smallb4U[], smallb2, and PoynSU[]: */\n",
+    "    sbPoynETNRPy_lowlevel(cctkGH,cctk_lsh,\n",
+    "                          gxx,gxy,gxz,gyy,gyz,gzz,\n",
+    "                          alpha,\n",
+    "                          betax,betay,betaz,\n",
+    "                          &vel[CCTK_GFINDEX4D(cctkGH,0,0,0,0)],\n",
+    "                          &vel[CCTK_GFINDEX4D(cctkGH,0,0,0,1)],\n",
+    "                          &vel[CCTK_GFINDEX4D(cctkGH,0,0,0,2)],\n",
+    "                          &Bvec[CCTK_GFINDEX4D(cctkGH,0,0,0,0)],\n",
+    "                          &Bvec[CCTK_GFINDEX4D(cctkGH,0,0,0,1)],\n",
+    "                          &Bvec[CCTK_GFINDEX4D(cctkGH,0,0,0,2)],\n",
+    "                          \n",
+    "                          smallb4U0,smallb4U1,smallb4U2,smallb4U3,\n",
+    "                          smallb2,\n",
+    "                          PoynSU0,PoynSU1,PoynSU2);   \n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 2b: CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
+    "\n",
+    "Writing a module (\"thorn\") within the Einstein Toolkit requires that three \"ccl\" files be constructed, all in the root directory of the thorn:\n",
+    "\n",
+    "1. $\\text{interface.ccl}$: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns.\n",
+    "1. $\\text{param.ccl}$: specifies free parameters within the thorn.\n",
+    "1. $\\text{schedule.ccl}$: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions.\n",
+    "\n",
+    "Let's start with $\\text{interface.ccl}$. The [official Einstein Toolkit (Cactus) documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManual.html) defines what must/should be included in an interface.ccl file [**here**](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting sbPoynETNRPy/interface.ccl\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile sbPoynETNRPy/interface.ccl\n",
+    "\n",
+    "# With \"implements\", we give our thorn its unique name.\n",
+    "implements: sbPoynETNRPy\n",
+    "\n",
+    "# By \"inheriting\" other thorns, we tell the Toolkit that we \n",
+    "#   will rely on variables/function that exist within those\n",
+    "#   functions. \n",
+    "inherits:   ADMBase Boundary Grid HydroBase MethodofLines\n",
+    "\n",
+    "# Tell the Toolkit that we want the various Weyl scalars \n",
+    "#    and invariants to be visible to other thorns by using \n",
+    "#    the keyword \"public\". Note that declaring these \n",
+    "#    gridfunctions *does not* allocate memory for them;\n",
+    "#    that is done by the schedule.ccl file.\n",
+    "public:\n",
+    "CCTK_REAL smallb4U_group type=GF timelevels=3\n",
+    "{\n",
+    "  smallb4U0,smallb4U1,smallb4U2,smallb4U3\n",
+    "} \"smallb4U 4-vector\"\n",
+    "\n",
+    "public:\n",
+    "CCTK_REAL smallb2_group type=GF timelevels=3\n",
+    "{\n",
+    "  smallb2\n",
+    "} \"smallb2, twice the magnetic pressure\"\n",
+    "\n",
+    "public:\n",
+    "CCTK_REAL PoynSU_group type=GF timelevels=3\n",
+    "{\n",
+    "  PoynSU0,PoynSU1,PoynSU2\n",
+    "} \"Poynting 3-vector\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will now write the file $\\text{param.ccl}$. This file allows the listed parameters to be set at runtime. We also give allowed ranges and default values for each parameter. More information on this file's syntax can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-265000C2.3). \n",
+    "\n",
+    "The first parameter specifies how many time levels need to be stored. Generally when using the ETK's adaptive-mesh refinement (AMR) driver [Carpet](https://carpetcode.org/), three timelevels are needed so that the diagnostic quantities can be properly interpolated and defined across refinement boundaries. \n",
+    "\n",
+    "The second parameter determines how often we will calculate $b^\\mu$, $b^2$, and $S^i$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting sbPoynETNRPy/param.ccl\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile sbPoynETNRPy/param.ccl\n",
+    "\n",
+    "restricted:\n",
+    "CCTK_INT timelevels \"Number of active timelevels\" STEERABLE=RECOVER\n",
+    "{\n",
+    "  0:3 :: \"\"\n",
+    "} 3\n",
+    "\n",
+    "restricted:\n",
+    "CCTK_INT sbPoynETNRPy_calc_every \"Compute these quantities every sbPoynETNRPy_calc_every iterations.\" STEERABLE=ALWAYS\n",
+    "{\n",
+    "  *:* :: \"\"\n",
+    "} 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we will write the file $\\text{schedule.ccl}$; its official documentation is found [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-268000C2.4). \n",
+    "\n",
+    "This file registers the function we wish to call, \"sbPoynETNRPy\", with the Einstein Toolkit scheduler."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting sbPoynETNRPy/schedule.ccl\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile sbPoynETNRPy/schedule.ccl\n",
+    "\n",
+    "STORAGE: smallb4U_group[timelevels]\n",
+    "STORAGE: smallb2_group[timelevels]\n",
+    "STORAGE: PoynSU_group[timelevels]\n",
+    "\n",
+    "schedule group sbPoynETNRPy_group in MoL_PseudoEvolution after ADMBase_SetADMVars\n",
+    "{\n",
+    "} \"Schedule sbPoynETNRPy group\"\n",
+    "\n",
+    "schedule sbPoynETNRPy in sbPoynETNRPy_group\n",
+    "{\n",
+    "    LANG: C\n",
+    "    READS: admbase::gxx(Everywhere)\n",
+    "    READS: admbase::gxy(Everywhere)\n",
+    "    READS: admbase::gxz(Everywhere)\n",
+    "    READS: admbase::gyy(Everywhere)\n",
+    "    READS: admbase::gyz(Everywhere)\n",
+    "    READS: admbase::gzz(Everywhere)\n",
+    "\n",
+    "    READS: admbase::alpha(Everywhere)\n",
+    "\n",
+    "    READS: admbase::betax(Everywhere)\n",
+    "    READS: admbase::betay(Everywhere)\n",
+    "    READS: admbase::betaz(Everywhere)\n",
+    "\n",
+    "    READS: HydroBase::vel(Everywhere)\n",
+    "    READS: HydroBase::Bvec(Everywhere)\n",
+    "\n",
+    "    WRITES: sbPoynETNRPy::smallb4U0(Everywhere)\n",
+    "    WRITES: sbPoynETNRPy::smallb4U1(Everywhere)\n",
+    "    WRITES: sbPoynETNRPy::smallb4U2(Everywhere)\n",
+    "    WRITES: sbPoynETNRPy::smallb4U3(Everywhere)\n",
+    "\n",
+    "    WRITES: sbPoynETNRPy::smallb2(Everywhere)\n",
+    "    \n",
+    "    WRITES: sbPoynETNRPy::PoynSU0(Everywhere)\n",
+    "    WRITES: sbPoynETNRPy::PoynSU1(Everywhere)\n",
+    "    WRITES: sbPoynETNRPy::PoynSU2(Everywhere)\n",
+    "} \"Call sbPoynETNRPy main function, to compute $b^mu$, $b^2$, and $S^i$\""
    ]
   }
  ],
