The sbPoynETNRPy thorn even compiles now!

--- a/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
+++ b/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
@@ -188,6 +188,8 @@
     "                           CCTK_REAL *smallb2GF,\n",
     "                           CCTK_REAL *PoynSU0GF,CCTK_REAL *PoynSU1GF,CCTK_REAL *PoynSU2GF) {\n",
     "\n",
+    "    DECLARE_CCTK_PARAMETERS;\n",
+    "\n",
     "#pragma omp parallel for\n",
     "    for(int i2=0;i2<cctk_lsh[2];i2++) for(int i1=0;i1<cctk_lsh[1];i1++) for(int i0=0;i0<cctk_lsh[0];i0++) {\n",
     "        const CCTK_REAL gammaDD00 = gammaDD00GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
@@ -214,7 +216,7 @@
     "\n",
     "        CCTK_REAL u0;\n",
     "#include \"u0.h\"\n",
-    "#include \"smallb4U_smallb2_PoynSU.h\"\"\n",
+    "#include \"smallb4U_smallb2_PoynSU.h\"\n",
     "    }\n",
     "}\n",
     "\n",
@@ -228,7 +230,7 @@
     "    /* Calculate smallb4U[], smallb2, and PoynSU[]: */\n",
     "    sbPoynETNRPy_lowlevel(cctkGH,cctk_lsh,\n",
     "                          gxx,gxy,gxz,gyy,gyz,gzz,\n",
-    "                          alpha,\n",
+    "                          alp,\n",
     "                          betax,betay,betaz,\n",
     "                          &vel[CCTK_GFINDEX4D(cctkGH,0,0,0,0)],\n",
     "                          &vel[CCTK_GFINDEX4D(cctkGH,0,0,0,1)],\n",
@@ -437,7 +439,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing sbPoynETNRPy/src/make.code.defn\n"
+      "Overwriting sbPoynETNRPy/src/make.code.defn\n"
      ]
     }
    ],
