Small edits to the text and ordering of the tutorial.

--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -65,7 +65,16 @@
     "# Step 1: Set the finite differencing order to 4.\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 4)\n",
     "\n",
-    "thismodule = \"GiRaFFE_NRPy\"\n"
+    "thismodule = \"GiRaFFE_NRPy\"\n",
+    "\n",
+    "gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"gammaDD\", \"sym01\",DIM=3)\n",
+    "betaU   = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"betaU\",DIM=3)\n",
+    "alpha   = gri.register_gridfunctions(\"AUX\",\"alpha\")\n",
+    "ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"ValenciavU\",DIM=3)\n",
+    "BtildeU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"BtildeU\",DIM=3)\n",
+    "\n",
+    "import u0_smallb_Poynting__Cartesian.u0_smallb_Poynting__Cartesian as u0b\n",
+    "u0b.compute_u0_smallb_Poynting__Cartesian(gammaDD,betaU,alpha,ValenciavU,BtildeU)\n"
    ]
   },
   {
@@ -88,16 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2: Build the four metric\n",
-    "gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"gammaDD\", \"sym01\",DIM=3)\n",
-    "betaU   = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"betaU\",DIM=3)\n",
-    "alpha   = gri.register_gridfunctions(\"AUX\",\"alpha\")\n",
-    "ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"ValenciavU\",DIM=3)\n",
-    "BtildeU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"BtildeU\",DIM=3)\n",
-    "\n",
-    "import u0_smallb_Poynting__Cartesian.u0_smallb_Poynting__Cartesian as u0b\n",
-    "u0b.compute_u0_smallb_Poynting__Cartesian(gammaDD,betaU,alpha,ValenciavU,BtildeU)\n",
-    "\n",
+    "# Step 2: Import the four metric\n",
     "dummygammaUU, gammaDET = ixp.symm_matrix_inverter3x3(gammaDD)\n",
     "betaD = ixp.zerorank1()\n",
     "for i in range(DIM):\n",
