Fix some conventions in S^i. Also B^i and not \tilde{B}^i is input

--- a/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
+++ b/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
@@ -283,15 +283,10 @@
     "\\sqrt{4\\pi} b^i = B^i_{\\rm (u)} &= \\frac{B^i + (u_j B^j) u^i}{\\alpha u^0}\\\\\n",
     "\\end{align}\n",
     "\n",
-    "$B^i$ is related to the actual magnetic field evaluated in IllinoisGRMHD, $\\tilde{B}^i$ via\n",
-    "\n",
-    "$$B^i = \\frac{\\tilde{B}^i}{\\gamma},$$\n",
-    "\n",
-    "where $\\gamma$ is the determinant of the spatial 3-metric.\n",
+    "$B^i$ is exactly equal to the $B^i$ evaluated in IllinoisGRMHD/GiRaFFE.\n",
     "\n",
     "Pulling this together, we currently have available as input:\n",
     "+ $\\tilde{B}^i$\n",
-    "+ $\\gamma$\n",
     "+ $u_j$\n",
     "+ $u^0$,\n",
     "\n",
@@ -305,11 +300,7 @@
    "outputs": [],
    "source": [
     "M_PI = par.Cparameters(\"REAL\",thismodule,\"M_PI\")\n",
-    "BtildeU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"BtildeU\",DIM=3)\n",
-    "\n",
-    "BU = ixp.zerorank1()\n",
-    "for i in range(DIM):\n",
-    "    BU[i] = BtildeU[i]/gammaDET\n",
+    "BU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"BU\",DIM=3)\n",
     "\n",
     "# uBcontraction = u_i B^i\n",
     "uBcontraction = sp.sympify(0)\n",
@@ -333,10 +324,10 @@
    "source": [
     "## Part 2 of 2: Computing the Poynting Flux Vector $S^{i}$\n",
     "\n",
-    "The Poynting flux is defined in Eq. 11 of [Kelly *et al*](https://arxiv.org/pdf/1710.02132.pdf):\n",
+    "The Poynting flux is defined in Eq. 11 of [Kelly *et al.*](https://arxiv.org/pdf/1710.02132.pdf) (note that we choose the minus sign convention so that the Poynting luminosity across a spherical shell is $L_{\\rm EM} = \\int (-\\alpha T^i_{\\rm EM\\ 0}) \\sqrt{\\gamma} d\\Omega = \\int S^r \\sqrt{\\gamma} d\\Omega$, as in [Farris *et al.*](https://arxiv.org/pdf/1207.3354.pdf):\n",
     "\n",
     "$$\n",
-    "S^i = \\alpha T^i_{\\rm EM\\ 0} = \\alpha\\left(b^2 u^i u_0 + \\frac{1}{2} b^2 g^i{}_0 - b^i b_0\\right)\n",
+    "S^i = -\\alpha T^i_{\\rm EM\\ 0} = -\\alpha\\left(b^2 u^i u_0 + \\frac{1}{2} b^2 g^i{}_0 - b^i b_0\\right)\n",
     "$$\n",
     "\n",
     "## Part 2, Step 1: Computing $g^{i\\nu}$:\n",
@@ -384,7 +375,7 @@
     "$$\n",
     "and then the rest of the Poynting flux vector can be immediately computed from quantities defined above:\n",
     "$$\n",
-    "S^i = \\alpha T^i_{\\rm EM\\ 0} = \\alpha\\left(b^2 u^i u_0 + \\frac{1}{2} b^2 g^i{}_0 - b^i b_0\\right)\n",
+    "S^i = -\\alpha T^i_{\\rm EM\\ 0} = -\\alpha\\left(b^2 u^i u_0 + \\frac{1}{2} b^2 g^i{}_0 - b^i b_0\\right)\n",
     "$$"
    ]
   },
@@ -420,7 +411,7 @@
     "# Step 2d: compute S^i\n",
     "PoynSU = ixp.zerorank1()\n",
     "for i in range(DIM):\n",
-    "    PoynSU[i] = alpha * (smallb2*uU[i]*u_0 + sp.Rational(1,2)*smallb2*g4UD[i+1][0] - smallb4U[i+1]*smallb4D[0])"
+    "    PoynSU[i] = -alpha * (smallb2*uU[i]*u_0 + sp.Rational(1,2)*smallb2*g4UD[i+1][0] - smallb4U[i+1]*smallb4D[0])"
    ]
   },
   {
@@ -465,7 +456,7 @@
     "print(\"vvv Ignore the minor warnings below. vvv\")\n",
     "\n",
     "import u0_smallb_Poynting__Cartesian.u0_smallb_Poynting__Cartesian as u0etc\n",
-    "u0etc.compute_u0_smallb_Poynting__Cartesian(gammaDD,betaU,alpha,ValenciavU,BtildeU)\n",
+    "u0etc.compute_u0_smallb_Poynting__Cartesian(gammaDD,betaU,alpha,ValenciavU,BU)\n",
     "\n",
     "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
     "\n",
