sbPoynETNRPy: Validated against smallbPoynET.

--- a/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
+++ b/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
@@ -247,8 +247,8 @@
    "outputs": [],
    "source": [
     "u0 = par.Cparameters(\"REAL\",thismodule,\"u0\")\n",
-    "uD = ixp.zerorank1()\n",
     "\n",
+    "uD = ixp.zerorank1()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        uD[j] += alpha*u0*gammaDD[i][j]*ValenciavU[j]"
@@ -360,7 +360,7 @@
     "    g4UU[0][i+1] = g4UU[i+1][0] = betaU[i]/alpha**2\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        g4UU[i+1][j+1] = gammaUU[i][j]"
+    "        g4UU[i+1][j+1] = gammaUU[i][j] - betaU[i]*betaU[j]/alpha**2"
    ]
   },
   {
