--- a/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
+++ b/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
@@ -107,8 +107,8 @@
     "                                                  # used in diagnostic modules.\n",
     "ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"ValenciavU\") # The AUX or EVOL designation is *not*\n",
     "                                                                             # used in diagnostic modules.\n",
-    "BtildeU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"BtildeU\") # The AUX or EVOL designation is *not*\n",
-    "                                                                       # used in diagnostic modules.\n",
+    "BU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"BU\") # The AUX or EVOL designation is *not*\n",
+    "                                                             # used in diagnostic modules.\n",
     "\n",
     "# OUTPUT GRIDFUNCTIONS:\n",
     "smallb4U = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"smallb4U\",DIM=4) # The AUX or EVOL designation is *not*\n",
@@ -120,7 +120,7 @@
     "\n",
     "# Step 1f: Call the NRPy+ module to set up the SymPy expressions for the output, as well as the C code for computing u^0\n",
     "import u0_smallb_Poynting__Cartesian.u0_smallb_Poynting__Cartesian as u0etc\n",
-    "u0etc.compute_u0_smallb_Poynting__Cartesian(gammaDD,betaU,alpha,ValenciavU,BtildeU)\n",
+    "u0etc.compute_u0_smallb_Poynting__Cartesian(gammaDD,betaU,alpha,ValenciavU,BU)\n",
     "\n",
     "# Step 1g: Set the gridfunction memory access type to \"ETK\":\n",
     "par.set_parval_from_str(\"GridFuncMemAccess\",\"ETK\")\n",
@@ -182,8 +182,7 @@
     "                           const CCTK_REAL *gammaDD11GF,const CCTK_REAL *gammaDD12GF,const CCTK_REAL *gammaDD22GF,\n",
     "                           const CCTK_REAL *alphaGF,\n",
     "                           const CCTK_REAL *betaU0GF,const CCTK_REAL *betaU1GF,const CCTK_REAL *betaU2GF,\n",
-    "                           const CCTK_REAL *ValenciavU0GF,const CCTK_REAL *ValenciavU1GF,const CCTK_REAL *ValenciavU2GF,\n",
-    "                           const CCTK_REAL *BtildeU0GF,const CCTK_REAL *BtildeU1GF,const CCTK_REAL *BtildeU2GF,\n",
+    "                           const CCTK_REAL *vel,const CCTK_REAL *Bvec,\n",
     "\n",
     "                           CCTK_REAL *smallb4U0GF,CCTK_REAL *smallb4U1GF,CCTK_REAL *smallb4U2GF,CCTK_REAL *smallb4U3GF,\n",
     "                           CCTK_REAL *smallb2GF,\n",
@@ -207,18 +206,17 @@
     "        const CCTK_REAL betaU2 = betaU2GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
     "        \n",
     "        // Valencia 3-velocity may be adjusted due to the velocity ceiling.\n",
-    "        CCTK_REAL ValenciavU0 = ValenciavU0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
-    "        CCTK_REAL ValenciavU1 = ValenciavU1GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
-    "        CCTK_REAL ValenciavU2 = ValenciavU2GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "        CCTK_REAL ValenciavU0 = vel[CCTK_GFINDEX4D(cctkGH, i0,i1,i2, 0)];\n",
+    "        CCTK_REAL ValenciavU1 = vel[CCTK_GFINDEX4D(cctkGH, i0,i1,i2, 1)];\n",
+    "        CCTK_REAL ValenciavU2 = vel[CCTK_GFINDEX4D(cctkGH, i0,i1,i2, 2)];\n",
     "\n",
-    "        const CCTK_REAL BtildeU0 = BtildeU0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
-    "        const CCTK_REAL BtildeU1 = BtildeU1GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
-    "        const CCTK_REAL BtildeU2 = BtildeU2GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "        const CCTK_REAL BU0 = Bvec[CCTK_GFINDEX4D(cctkGH, i0,i1,i2, 0)];\n",
+    "        const CCTK_REAL BU1 = Bvec[CCTK_GFINDEX4D(cctkGH, i0,i1,i2, 1)];\n",
+    "        const CCTK_REAL BU2 = Bvec[CCTK_GFINDEX4D(cctkGH, i0,i1,i2, 2)];\n",
     "\n",
     "        CCTK_REAL u0;\n",
     "#include \"u0.h\"\n",
     "#include \"smallb4U_smallb2_PoynSU.h\"\n",
-    "        smallb4U0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)] = u0;\n",
     "    }\n",
     "}\n",
     "\n",
@@ -226,23 +224,20 @@
     "    \n",
     "    DECLARE_CCTK_PARAMETERS;\n",
     "    DECLARE_CCTK_ARGUMENTS;\n",
-    "\n",
-    "    if(cctk_iteration % sbPoynETNRPy_calc_every != 0) { return; }\n",
     "    \n",
+    "    if(sbPoynETNRPy_calc_every<=0 || cctk_iteration%sbPoynETNRPy_calc_every!=0) { return; }\n",
+    "    \n",
+    "    printf(\"HEYYY sb0000: %.15e\\n\",Bvec[CCTK_GFINDEX4D(cctkGH,20,20,20,2)]);\n",
+    "\n",
     "    /* Calculate smallb4U[], smallb2, and PoynSU[]: */\n",
     "    sbPoynETNRPy_lowlevel(cctkGH,cctk_lsh,\n",
     "                          gxx,gxy,gxz,gyy,gyz,gzz,\n",
     "                          alp,\n",
     "                          betax,betay,betaz,\n",
-    "                          &vel[CCTK_GFINDEX4D(cctkGH,0,0,0,0)],\n",
-    "                          &vel[CCTK_GFINDEX4D(cctkGH,0,0,0,1)],\n",
-    "                          &vel[CCTK_GFINDEX4D(cctkGH,0,0,0,2)],\n",
-    "                          &Bvec[CCTK_GFINDEX4D(cctkGH,0,0,0,0)],\n",
-    "                          &Bvec[CCTK_GFINDEX4D(cctkGH,0,0,0,1)],\n",
-    "                          &Bvec[CCTK_GFINDEX4D(cctkGH,0,0,0,2)],\n",
+    "                          vel,Bvec,\n",
     "                          \n",
     "                          smallb4U0,smallb4U1,smallb4U2,smallb4U3,\n",
-    "                          smallb2,\n",
+    "                          smallb4_sq,\n",
     "                          PoynSU0,PoynSU1,PoynSU2);   \n",
     "}"
    ]
@@ -298,10 +293,10 @@
     "} \"smallb4U 4-vector\"\n",
     "\n",
     "public:\n",
-    "CCTK_REAL smallb2_group type=GF timelevels=3\n",
+    "CCTK_REAL smallb4_sq_group type=GF timelevels=3\n",
     "{\n",
-    "  smallb2\n",
-    "} \"smallb2, twice the magnetic pressure\"\n",
+    "  smallb4_sq\n",
+    "} \"smallb^{mu} squared == twice the magnetic pressure\"\n",
     "\n",
     "public:\n",
     "CCTK_REAL PoynSU_group type=GF timelevels=3\n",
@@ -384,7 +379,7 @@
     "%%writefile sbPoynETNRPy/schedule.ccl\n",
     "\n",
     "STORAGE: smallb4U_group[timelevels]\n",
-    "STORAGE: smallb2_group[timelevels]\n",
+    "STORAGE: smallb4_sq_group[timelevels]\n",
     "STORAGE: PoynSU_group[timelevels]\n",
     "\n",
     "schedule group sbPoynETNRPy_group in MoL_PseudoEvolution after ADMBase_SetADMVars\n",
@@ -415,7 +410,7 @@
     "    WRITES: sbPoynETNRPy::smallb4U2(Everywhere)\n",
     "    WRITES: sbPoynETNRPy::smallb4U3(Everywhere)\n",
     "\n",
-    "    WRITES: sbPoynETNRPy::smallb2(Everywhere)\n",
+    "    WRITES: sbPoynETNRPy::smallb4_sq(Everywhere)\n",
     "    \n",
     "    WRITES: sbPoynETNRPy::PoynSU0(Everywhere)\n",
     "    WRITES: sbPoynETNRPy::PoynSU1(Everywhere)\n",
