sbPoynETNRPy has been validated against a trusted code. Add to NRPy+ homepage and add validation notes to corresponding modules

--- a/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
+++ b/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# sbPoynETNRPy: An Einstein Toolkit Thorn for Computing the 4-Velocity Time-Component $u^0$, the Magnetic Field Measured by a Comoving Observer $b^{\\mu}$, and the Poynting Vector $S^i$\n",
     "\n",
-    "<font color='red'>**This module has not yet been validated against a trusted code.**</font>\n",
+    "<font color='green'>**This module has been validated against a trusted code**</font> \n",
+    "\n",
+    "(trusted code = the hand-written smallbPoynET in WVUThorns_diagnostics, which itself is based on expressions in IllinoisGRMHD... which was validated against the original GRMHD code of the Illinois NR group).\n",
     "\n",
     "In the [previous tutorial module](Tutorial-u0_smallb_Poynting-Cartesian.ipynb), we constructed within SymPy full expressions for the 4-velocity time-component $u^0$, the magnetic field (measured by a comoving observer) $b^{\\mu}$, and the Poynting vector $S^i$.\n",
     "\n",
@@ -226,8 +228,6 @@
     "    DECLARE_CCTK_ARGUMENTS;\n",
     "    \n",
     "    if(sbPoynETNRPy_calc_every<=0 || cctk_iteration%sbPoynETNRPy_calc_every!=0) { return; }\n",
-    "    \n",
-    "    printf(\"HEYYY sb0000: %.15e\\n\",Bvec[CCTK_GFINDEX4D(cctkGH,20,20,20,2)]);\n",
     "\n",
     "    /* Calculate smallb4U[], smallb2, and PoynSU[]: */\n",
     "    sbPoynETNRPy_lowlevel(cctkGH,cctk_lsh,\n",
@@ -333,6 +333,9 @@
    ],
    "source": [
     "%%writefile sbPoynETNRPy/param.ccl\n",
+    "\n",
+    "shares: HydroBase\n",
+    "USES CCTK_INT timelevels\n",
     "\n",
     "restricted:\n",
     "CCTK_INT timelevels \"Number of active timelevels\" STEERABLE=RECOVER\n",
