Added preliminaries for the electrodynamic evolution equations.

--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -8,14 +8,14 @@
     "# $\\giraffe$: General Relativistic Force-Free Electrodynamics\n",
     "## Porting the original $\\giraffe$ code to NRPy+\n",
     "\n",
-    "Porting the original $\\giraffe$ code to NRPy+ will generally make it easier to maintain, as well as to make changes. Specifically, it will make it nearly trivial to increase the finite-differencing order."
+    "Porting the original $\\giraffe$ code as presented in [the original paper](https://arxiv.org/pdf/1704.00599.pdf) to NRPy+ will generally make it easier to maintain, as well as to make changes. Specifically, it will make it nearly trivial to increase the finite-differencing order."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our ultimate goal here will be to code the evolution equation \n",
+    "Our ultimate goal here will be to code the evolution equation (from eq. 13 of the [original paper](https://arxiv.org/pdf/1704.00599.pdf)):\n",
     "\\begin{equation}\n",
     "\\partial_t \\tilde{S}_i = - \\partial_j \\left( \\alpha \\sqrt{\\gamma} T^j_{{\\rm EM} i} \\right) + \\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu},\n",
     "\\end{equation}\n",
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "# Step 2: Import the four metric\n",
-    "dummygammaUU, gammaDET = ixp.symm_matrix_inverter3x3(gammaDD)\n",
+    "gammaUU, gammaDET = ixp.symm_matrix_inverter3x3(gammaDD)\n",
     "betaD = ixp.zerorank1()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
@@ -170,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that the metric and its derivatives are out of the way, we will return our attention to the electromagnetic stress-energy tensor\n",
+    "Now that the metric and its derivatives are out of the way, we will return our attention to the electromagnetic stress-energy tensor, drawn from eq. 27 of [this paper](https://arxiv.org/pdf/1310.3274.pdf):\n",
     "$$T^{\\mu \\nu}_{\\rm EM} = b^2 u^{\\mu} u^{\\nu} + \\frac{b^2}{2} g^{\\mu \\nu} - b^{\\mu} b^{\\nu}.$$\n",
     "We will need the four-velocity $u^\\mu$, where \n",
     "\\begin{align}\n",
@@ -209,7 +209,7 @@
     "\\end{align} and \\begin{align}\n",
     "B^i &= \\frac{\\tilde{B}^i}{\\gamma},\n",
     "\\end{align}\n",
-    "where $\\tilde{B}^i$ is the variable tracked by the HydroBase thorn in the Einstein Toolkit. These have already been built by the u0_smallb_Poynting__Cartesian.py module, so we can simply import the variables."
+    "where $B^i$ is the variable tracked by the HydroBase thorn in the Einstein Toolkit. These have already been built by the u0_smallb_Poynting__Cartesian.py module, so we can simply import the variables."
    ]
   },
   {
@@ -305,11 +305,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will also need to evolve the vector potential $A_i$. This evolution is given as eq. 17 in the [$\\giraffe$](https://arxiv.org/pdf/1704.00599.pdf) paper:\n",
+    "$$\\partial_t A_i = \\epsilon_{ijk} v^j B^k - \\partial_i (\\alpha \\Phi - \\beta^j A_j),$$\n",
+    "where $\\epsilon_{ijk} = [ijk] \\sqrt{\\gamma}$ is the antisymmetric Levi-Civita tensor and $\\gamma$ is the determinant of the three metric. The magnetic field $B^k$ is defined as usual (eq. 18):\n",
+    "$$B^i = \\epsilon^{ijk} \\partial_j A_k.$$\n",
+    "The scalar electric potential $\\Phi$ is also evolved by eq. 19:\n",
+    "$$\\partial_t [\\sqrt{\\gamma} \\Phi] = -\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi],$$\n",
+    "with $\\xi$ chosen as a damping factor."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# We already have a handy function to define the Levi-Civita symbol in WeylScalars\n",
+    "import WeylScal4NRPy.WeylScalars_Cartesian as weyl\n",
+    "LeviCivitaDDD = weyl.define_LeviCivitaSymbol_rank3()\n",
+    "LeviCivitaUUU = ixp.zerorank3()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            LeviCivitaDDD[i][j][k] = LeviCivitaDDD[i][j][k] * sp.sqrt(gammaDET)\n",
+    "            LeviCivitaUUU[i][j][k] = LeviCivitaDDD[i][j][k] / sp.sqrt(gammaDET)\n",
+    "\n",
+    "# We need to define a few more gridfunctions here.\n",
+    "AD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"AD\")\n",
+    "AD_dD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"AD_dD\",\"nosym\")\n",
+    "BU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"BU\")\n",
+    "# Call sqrt(gamma)Phi Phitilde\n",
+    "Phitilde = gri.register_gridfunctions(\"AUX\",\"Phitilde\")\n",
+    "Phi = Phitilde / sp.sqrt(gammaDET)\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            BU[i] = LeviCivitaUUU[i][j][k] *AD_dD[k][j]\n",
+    "\n",
+    "# We'll define a few extra gridfunctions to avoid complicated derivatives\n",
+    "AevolParen = gri.register_gridfunctions(\"AUX\",\"AevolParen\")\n",
+    "PevolParenU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"PevolParenU\")\n",
+    "\n",
+    "AevolParen = alpha*Phi\n",
+    "for j in range(DIM):\n",
+    "    AevolParen    -= betaU[j] * AD[j]\n",
+    "    PevolParenU[j] = -betaU[j] * Phitilde\n",
+    "    for i in range(DIM):\n",
+    "        PevolParenU[j] += alpha * sp.sqrt(gammaDET) * gammaUU[i][j] * AD[i]\n",
+    "\n",
+    "AevolParen_dD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"AevolParen_dD\")\n",
+    "PevolParenU_dD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"PevolParenU_dD\",\"nosym\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now to actually define set the evolution equations:\n",
+    "\\begin{align}\n",
+    "\\partial_t A_i &= \\epsilon_{ijk} v^j B^k - \\partial_i (\\alpha \\Phi - \\beta^j A_j) \\\\\n",
+    "\\partial_t [\\sqrt{\\gamma} \\Phi] &= -\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi]. \\\\\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AD_rhsD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"AD_rhsD\")\n",
+    "Phitilde_rhs = gri.register_gridfunctions(\"EVOL\",\"Phitilde_rhs\")\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            AD_rhsD[i] = LeviCivitaDDD[i][j][k]"
+   ]
   }
  ],
  "metadata": {
