GiRaFFE higher order: Add comments

--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\newcommand{\\giraffe}{\\text{GiRaFFE}}$\n",
+    "$\\newcommand{\\giraffe}{\\texttt{GiRaFFE}}$\n",
     "# $\\giraffe$: General Relativistic Force-Free Electrodynamics\n",
     "## Porting the original $\\giraffe$ code to NRPy+\n",
     "\n",
@@ -76,7 +76,7 @@
     "AD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"AD\",DIM=3)\n",
     "\n",
     "import u0_smallb_Poynting__Cartesian.u0_smallb_Poynting__Cartesian as u0b\n",
-    "u0b.compute_u0_smallb_Poynting__Cartesian(gammaDD,betaU,alpha,ValenciavU,BU)\n"
+    "u0b.compute_u0_smallb_Poynting__Cartesian(gammaDD,betaU,alpha,ValenciavU,BU)"
    ]
   },
   {
@@ -114,7 +114,7 @@
     "for mu in range(4):\n",
     "    for nu in range(4):\n",
     "        g4DD[mu][nu] = u0b.g4DD[mu][nu]\n",
-    "        g4UU[mu][nu] = u0b.g4UU[mu][nu]\n"
+    "        g4UU[mu][nu] = u0b.g4UU[mu][nu]"
    ]
   },
   {
@@ -158,16 +158,15 @@
     "            betaDdD[i][j] = gammaDD[i][k] * betaU_dD[k][j] + betaU[k] * gammaDD_dD[i][k][j]\n",
     "\n",
     "# Step 3c: Set the 00 components\n",
-    "for i in range(1,4):\n",
-    "    g4DDdD[0][0][i] = -2*alpha*alpha_dD[i-1]\n",
+    "for chi in range(1,4):\n",
+    "    g4DDdD[0][0][i] = -2*alpha*alpha_dD[chi-1]\n",
     "    for k in range(DIM):\n",
-    "        g4DDdD[0][0][i] += betaU_dD[k][i-1] * betaD[k] + betaU[k] * betaDdD[k][i-1]\n",
+    "        g4DDdD[0][0][chi] += betaU_dD[k][chi-1] * betaD[k] + betaU[k] * betaDdD[k][chi-1]\n",
     "    for mu in range(1,4):\n",
-    "        g4DDdD[mu][0][i] = g4DDdD[0][mu][i-1] = betaDdD[mu-1][i-1]\n",
+    "        g4DDdD[mu][0][i] = g4DDdD[0][mu][chi-1] = betaDdD[mu-1][chi-1]\n",
     "    for mu in range(1,4):\n",
     "        for nu in range(1,4):\n",
-    "            g4DDdD[mu][nu][i] = gammaDD_dD[mu-1][nu-1][i-1]\n",
-    "        "
+    "            g4DDdD[mu][nu][chi] = gammaDD_dD[mu-1][nu-1][chi-1]"
    ]
   },
   {
@@ -198,7 +197,7 @@
     "u0 = u0b.u0\n",
     "for i in range(DIM):\n",
     "    uD[i] = u0b.uD[i]\n",
-    "    uU[i] = u0b.uU[i]\n"
+    "    uU[i] = u0b.uU[i]"
    ]
   },
   {
@@ -227,7 +226,7 @@
     "    smallbU[mu] = u0b.smallb4U[mu]\n",
     "    smallbD[mu] = u0b.smallb4D[mu]\n",
     "\n",
-    "smallb2 = u0b.smallb2\n"
+    "smallb2 = u0b.smallb2"
    ]
   },
   {
@@ -251,8 +250,7 @@
     "    TEMUU[mu][0] = TEMUU[0][mu] = smallb2*uU[mu-1]*u0 + smallb2*g4UU[mu][0]/2 - smallbU[mu]*smallbU[0]\n",
     "for mu in range(1,4):\n",
     "    for nu in range(1,4):\n",
-    "        TEMUU[mu][nu] = smallb2*uU[mu-1]*uU[nu-1] + smallb2*g4UU[mu][nu]/2 - smallbU[mu]*smallbU[nu]\n",
-    "        "
+    "        TEMUU[mu][nu] = smallb2*uU[mu-1]*uU[nu-1] + smallb2*g4UU[mu][nu]/2 - smallbU[mu]*smallbU[nu]"
    ]
   },
   {
@@ -280,6 +278,10 @@
     "B^i_{,l} &= \\partial_l \\left( \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k \\right) = \\frac{[ijk] \\gamma_{,l}}{2\\gamma^{3/2}} \\partial_j A_k + \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_l \\partial_j A_k \\\\\n",
     "&= -\\frac{\\gamma_{,l}}{2\\gamma} \\epsilon^{ijk} \\partial_j A_k + \\epsilon^{ijk} \\partial_l \\partial_j A_k = \\frac{\\gamma_{,l}}{2\\gamma} B^i + \\epsilon^{ijk} A_{k,jl}, i \\neq l, \\\\\n",
     "\\end{align}\n",
+    "**Zach says: The last line is confusing. Can you please fill in the steps?**\n",
+    "\n",
+    "**Zach says: I think it would be easiest to just take finite difference derivatives of $\\alpha u^0$, $u^i$, and $u_j$ directly; i.e., precompute them as gridfunctions. Then we don't need to rely on so many other derivatives. Each derivative will add some small bit of numerical noise, so minimizing the total number of derivatives would be ideal. Thus the general rule would be: express $B^i$ and its derivatives in terms of $A_i$, and try to find combinations of other quantities to precompute as gridfunctions to minimize the total number of finite difference derivatives taken. I'm generally fine with taking derivatives of spacetime metric quantities expanded using the product rule, since defining them as gridfunctions would require a lot of gridfunctions, and these quantities are usually pretty smooth (and thus amenable to finite differencing).**\n",
+    "\n",
     "First, we will handle the derivatives of the velocity $u^i$ and its lowered form."
    ]
   },
@@ -505,7 +507,7 @@
     "$$B^i = \\epsilon^{ijk} \\partial_j A_k.$$\n",
     "The scalar electric potential $\\Phi$ is also evolved by eq. 19:\n",
     "$$\\partial_t [\\sqrt{\\gamma} \\Phi] = -\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi],$$\n",
-    "with $\\xi$ chosen as a damping factor."
+    "with $\\xi$ chosen as a damping factor. **Zach says: It might be useful to upwind the $\\partial_j \\beta^j$ term. I prefer the name $\\text{psi6Phi}$ for the evolution variable, as it's defined as $\\sqrt{\\gamma}\\Phi=\\psi^6 \\Phi$, where $\\psi$ is the conformal factor.**"
    ]
   },
   {
@@ -573,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
