--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "Though it was originally designed to greatly **accelerate software development** for [numerical relativity](https://en.wikipedia.org/wiki/Numerical_relativity) (i.e., solving Einstein's equations of general relativity on the computer), **NRPy+** can be used to rapidly develop software to solve much broader classes of [hyperbolic](https://en.wikipedia.org/wiki/Hyperbolic_partial_differential_equation) and [parabolic](https://en.wikipedia.org/wiki/Parabolic_partial_differential_equation) partial differential equations with finite difference approaches.\n",
     "\n",
-    "## NRPy+ Tutorial Modules: Work through PART 1 through PART 3, in order\n",
+    "## NRPy+ Tutorial Modules\n",
     "### PART 1: Basic functionality of NRPy+, a First Application\n",
     "##### NRPy+ Basics\n",
     "+ [Basic C Code Output, NRPy+'s Parameter Interface](Tutorial-Coutput__Parameter_Interface.ipynb)\n",
